# unit-testing-examples

./: .clang-format  CMakeLists.txt  conanfile.txt
stage_1/: CMakeLists.txt
stage_1/include/stage_1/: A.h  ParamClass.h
stage_1/tests/: CMakeLists.txt  testA.cpp
stage_2/: CMakeLists.txt
stage_2/include/stage_2/: ParamClass.h  Storage.h
stage_2/mocks/: CMakeLists.txt
stage_2/mocks/stage2mocks/: mockParam.h  mockResultComposer.h  mockStorage.h
stage_2/tests/: CMakeLists.txt  testA.cpp
stage_3/: CMakeLists.txt
stage_3/include/stage_3/: A.h  Storage.h
stage_3/mocks/: CMakeLists.txt
stage_3/mocks/stage3mocks/: mockMutex.h  mockParam.h  mockResultComposer.h  mockSet.h  mockStorage.h
stage_3/tests/: CMakeLists.txt  testA.cpp  testIntegration.cpp  testStorage.cpp
